# mlops-demo-project

./: .buildinfo  .gitignore  NEW_FEATURES_TO_IMPLEMENT.MD  README.md  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/_autosummary/: backend_microservice.audio_utils.doctree  backend_microservice.diarization.doctree  backend_microservice.doctree  backend_microservice.gpu_utils.doctree  backend_microservice.main.doctree  backend_microservice.transcription.doctree
.github/workflows/: docs.yml  tests.yml
_autosummary/: backend_microservice.audio_utils.html  backend_microservice.diarization.html  backend_microservice.gpu_utils.html  backend_microservice.html  backend_microservice.main.html  backend_microservice.transcription.html
_modules/: index.html
_modules/backend_microservice/: audio_utils.html  diarization.html  gpu_utils.html  main.html  transcription.html
_sources/: index.rst.txt
_sources/_autosummary/: backend_microservice.audio_utils.rst.txt  backend_microservice.diarization.rst.txt  backend_microservice.gpu_utils.rst.txt  backend_microservice.main.rst.txt  backend_microservice.rst.txt  backend_microservice.transcription.rst.txt
backend-microservice/: .dockerignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
backend-microservice/docs/source/: conf.py  index.rst
backend-microservice/docs/source/_autosummary/: backend_microservice.audio_utils.rst  backend_microservice.diarization.rst  backend_microservice.gpu_utils.rst  backend_microservice.main.rst  backend_microservice.rst  backend_microservice.transcription.rst
backend-microservice/src/backend_microservice/: audio_utils.py  azure_utils.py  diarization.py  evaluate.py  gpu_utils.py  load_data.py  lora_service.py  main.py  model.py  register_model.py  score.py  summarise.py  summarization.py  train.py  transcription.py
backend-microservice/tests/: __init__.py  pytest.ini  run_tests.py  test_main.py  test_transcription.py
data/: combine_transcripts.py  create_pairs.py  generate_summaries_gpt.py  generate_transcripts.py
frontend/: Dockerfile  docker-compose.yml  index.html  nginx.conf
frontend/js/: app.js  config.js
frontend/js/components/: action-buttons.js  audio-input.js  audio-notification.js  download.js  error.js  loading.js  results.js  settings.js  status-indicator.js  summary.js
frontend/js/services/: api-service.js  audio-service.js
frontend/js/utils/: audio-utils.js  file-utils.js  ui-utils.js
frontend/styles/: components.css  main.css  responsive.css
notebooks/: azure_data.ipynb  azure_envs_and_compute.ipynb  azure_training (Dean-Yoga's conflicted copy 2025-06-04).ipynb  azure_training.ipynb  azure_training_job.ipynb  azure_training_pipeline.ipynb  azureml_endpoint.ipynb  azureml_test.ipynb  conda.yaml  download_yt.ipynb  gpu_test.ipynb  lora_training.ipynb  split_wav_from_video.ipynb  test_summary.ipynb
