[project]
name = "backend-microservice"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"

[tool.poetry]
packages = [{include = "backend_microservice", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.2,<0.35.0"
torch = "^2.7.0"
torchaudio = "^2.7.0"
nemo-toolkit = {extras = ["asr"], version = "^2.3.0"}
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
