[project]
name = "backend-microservice"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"

[tool.poetry]
packages = [{include = "backend_microservice", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.2,<0.35.0"
nemo-toolkit = {extras = ["asr"], version = "^2.3.0"}
python-multipart = "^0.0.20"
httpx = "^0.28.1"
torch = ">=2.7.0,<3.0.0" # Upper bound added to ensure compatibility with future versions
transformers = "^4.52.3"
accelerate = "^1.7.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
pytest-mock = "^3.14.0"
pre-commit = "^4.2.0"
openai = "^1.82.0"
dotenv = "^0.9.9"
python-dotenv = "^1.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
